# Void_HC

./: .gitignore  .pylintrc  README.md  bot.toml  hc_gym_bot.py  loadout.toml  main.py  main_gym.py  pid.py  requirements.txt  rotation_utils.py  vec_op.py
.github/: pylint.yml
.github/workflows/: pylint.yml
common/: action_parser.py  hc_gym_bot.py  hc_typing.py  machine_action.py  pid.py  routine.py  routine_sequencer.py  speed_regulator.py  state_machine.py  target_shared_info_provider.py  throttle_state_machine.py
common/atba/: atba_primitives.py  atba_routine.py  atba_state_machine.py
common/flip/: flip_primitives.py  flip_routine.py  flip_state_machine.py
notes/: Flip state.txt
test/: action_parser.py  main_gym.py
train/: main.py
void-hc-api/: CHANGELOG.md  README.md  pyproject.toml
void-hc-api/src/void_hc/api/: __init__.py  hc_typing.py  pid.py  routine.py  routine_sequencer.py  state_machine.py  target_shared_info_provider.py
void-hc-atba/: CHANGELOG.md  README.md  pyproject.toml
void-hc-atba/src/void_hc/atba/: __init__.py  atba_primitives.py  atba_routine.py  atba_state_machine.py  pids.py
void-hc-boost/: CHANGELOG.md  README.md  pyproject.toml
void-hc-boost/src/void_hc/boost/: __init__.py
void-hc-boost/src/void_hc/boost/boost_usage/: __init__.py  primitives.py  routine.py  state_machine.py
void-hc-common/: CHANGELOG.md  README.md  pyproject.toml
void-hc-common/src/void_hc/common/: __init__.py  get_ball_pred.py
void-hc-common/src/void_hc/common/pid/: __init__.py
void-hc-common/src/void_hc/common/pid/base/: __init__.py  pitch_pid.py  roll_pid.py  steer_pid.py
void-hc-common/src/void_hc/common/pid/impl/: __init__.py  pitch_to_ball.py  roll_stabilization.py  steer_to_ball.py
void-hc-flip/: CHANGELOG.md  README.md  pyproject.toml
void-hc-flip/src/void_hc/flip/: README.md  __init__.py  flip_primitives.py  flip_routine.py  flip_state_machine.py
