[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "void-hc-api"
dynamic = ["version"]
description = "The API used to create routines for Void HC"
readme = "README.md"
authors = [
    { name = "Mathieu Suchet", email = "msuchet63@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["rlgym"]
# Optional: define classifiers for PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


[tool.setuptools.dynamic]
version = {attr = "void_hc.api.__version__"}

[tool.setuptools.packages.find]
where = ["src"]