[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "void-hc-flip"
dynamic = ["version"]
description = "The flip Routine used by Void HC"
readme = "README.md"
authors = [
    { name = "Mathieu Suchet", email = "msuchet63@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["void-hc-api", "rlgym[rl-sim]"]
# Optional: define classifiers for PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.dynamic]
version = {attr = "void_hc.flip.__version__"}

[tool.setuptools.packages.find]
where = ["src"]